[package]
name = "rustls-client"
version = "0.1.0"
authors = ["Programatik <programatik29@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
tokio = { version = "1.9.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
rustls = "0.19.1"
rustls-native-certs = "0.5.0"
tokio-rustls = "0.22.0"
tower = { version = "0.4.8", features = ["util"] }
hyper = { version = "0.14.11", features = ["runtime", "client", "http1", "http2"] }
