[package]
name = "websocket-chat"
version = "0.1.0"
authors = ["programatik"]
edition = "2018"

[dependencies]
futures = "0.3.15"
tokio = { version = "1.9.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
hyper = { version = "0.14.11", features = ["runtime", "server", "http1", "http2"] }
tokio-tungstenite = "0.15.0"
base64 = "0.13.0"
sha-1 = "0.9.7"
uuid = { version = "0.8.2", features = ["v4"] }
